test_scripts/errors/index_non_indexable.shm
let x = 5; x[0];
