test_scripts/errors/index_non_indexable.stderr
 1 | let x = 5; x[0];
                ^^^^
Error: Can't index 5 with 0
